Part1/ex1-8/manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server-svc
spec:
  type: ClusterIP
  selector:
    app: api-server
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8000
